fix draft css coloring, fix route for draft, fix some margin spacing in draft

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,11 +18,12 @@
   bottom:0;
   right: 0;
   height:100%;
-  background-color: gray;
+  background-color: #685757;
   width: 30%;
   top: 5%;
   z-index: 0;
 }
+
 
 #topbar{
   width: 100%;
