--- a/app/assets/stylesheets/draft.scss
+++ b/app/assets/stylesheets/draft.scss
@@ -12,7 +12,7 @@
 }
 
 .Green{
-  color:#006600;
+  color:#00ff7f;
 }
 
 .Red{
@@ -27,6 +27,7 @@
   color: #FFD700;
 }
 
-h3{
+
+#pooltitle{
   margin-top: 20px;
 }
